# radix-core

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/dashboard/: Dockerfile  requirements.txt
agents/dashboard/app/: config.py  main.py
agents/dashboard/app/routes/: health.py  jobs.py  metrics.py  overview.py
agents/dashboard/app/templates/: base.html  health.html  jobs.html  metrics.html  overview.html
agents/dashboard/tests/: test_dashboard.py
agents/k8s-agent/: Dockerfile  README.md  agent.py
agents/k8s-agent/k8s/: agent-deployment.yaml
agents/observer/: Dockerfile  app.py  requirements.txt
agents/scheduler-agent/: Dockerfile  README.md  requirements.txt
agents/scheduler-agent/app/: config.py  integration.py  main.py  model.py  scoring.py  sinkhorn.py
agents/scheduler-agent/tests/: test_exploration_cap.py  test_interference_penalty.py  test_sinkhorn_optional.py  test_uncertainty_shrinks.py
agents/scheduler-webhook/: Dockerfile  README.md
agents/scheduler-webhook/app/: webhook.py
agents/scheduler-webhook/tests/: test_webhook.py
agents/scheduler_agent_lib/: __init__.py  config.py  integration.py  model.py  schemas.py  scoring.py
benchmarks/resnet50/: Dockerfile  README.md  train_resnet50.py
charts/radix-cluster-agent/: Chart.yaml  values.yaml
charts/radix-cluster-agent/templates/: NOTES.txt  _helpers.tpl  agent-deployment.yaml  pvc.yaml  serviceaccount.yaml
charts/radix-core/: Chart.yaml  values.example.yaml  values.yaml
charts/radix-core/agent/templates/: deployment.yaml
charts/radix-core/dashboard/templates/: deployment.yaml  env-configmap.yaml  rbac.yaml
charts/radix-core/report/templates/: job.yaml
charts/radix-core/templates/: _helpers.tpl  agent-deploy.yaml  dashboard-deploy.yaml  dashboard-rbac.yaml  dashboard-svc.yaml  demo-llm-deploy.yaml  networkpolicy.yaml  observer-deploy.yaml  observer-rbac.yaml  radixplus-poller.yaml  report-pvc.yaml  ts-pvc.yaml  ux-configmap.yaml
charts/radix-core/webhook/templates/: deployment.yaml
charts/scheduler-agent/: Chart.yaml
charts/scheduler-agent/templates/: _helpers.tpl  hpa.yaml  pvc.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/scheduler-webhook/: Chart.yaml  values.yaml
charts/scheduler-webhook/templates/: _helpers.tpl  certificate.yaml  configmap.yaml  mutatingwebhookconfiguration.yaml  rbac.yaml  serviceaccount.yaml
docs/: CI_GPU_BENCHMARK_HARNESS.md  GPU_GOVERNANCE_REPORT.md  REPORT_2025-12-26_gpu-bench-suite_g5.2xlarge_resnet50.md  SENTINEL_GPU_MATRIX_CANONICAL_SUMMARY.md
examples/gpu_optional_generation/: README.md  run_demo.py
gitops/base/kueue/: clusterqueue.yaml  localqueue.yaml  priorityclasses.yaml
gitops/e2e/demo-jobs/: job-mix.yaml  job-serve-clip.yaml  job-train-bert.yaml
gitops/policy/rego/: deny_deploy.rego  deny_gpu.rego
infra/aws/: addons.tf  eks.tf  main.tf  outputs.tf  variables.tf  vpc.tf
infra/aws-runner-ec2/: main.tf  tfplan  user_data.sh.tmpl  variables.tf
infra/aws/templates/: gpu-userdata.sh
infra/bench_harness/: README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf
infra/experiments/resnet50_benchmark/: README.md  main.tf  outputs.tf  variables.tf
radix-bench/: README.md  analyze_metrics_from_stdout.py  league_manual.py  pyproject.toml  run_and_aggregate_metrics.py  run_and_aggregate_metrics_cfg.py  run_league_from_stdout.py  run_league_via_summaries.py
radix-bench/configs/: league_small.yaml  league_small_2gpu.yaml  radix_defaults.yaml  smoke.yaml
radix-bench/goldens/: smoke_test_baseline.json
radix-bench/src/radixbench/: __init__.py
radix-bench/src/radixbench/cli/: run_suite.py  simple_suite.py  simulate.py
radix-bench/src/radixbench/core/: costs.py
radix-bench/src/radixbench/metrics/: __init__.py  stats.py
radix-bench/src/radixbench/predictive/: __init__.py  predictor.py
radix-bench/src/radixbench/schedulers/: __init__.py  base.py  bfd.py  drf.py  easy.py  fifo.py  gavel.py  heft.py  radix_info_theory.py  radix_softmax.py  srpt.py
radix-bench/tests/: test_preemption_gate.py
radix_core/: __init__.py  algorithm_comparison.py  config.py  config_v2.py  cost_simulator.py  dryrun.py  errors.py  experiment_manager.py  features_v1.json  information_theory.py  logging.py  metrics.py  metrics_enhanced.py  mode.py  quantum_orchestration.py  types.py
radix_core/batching/: __init__.py  dynamic_batcher.py  microbatch.py
radix_core/cli/: __init__.py  radix.py
radix_core/executors/: __init__.py  hf_runner.py  ray_local.py  threadpool.py  vllm_local.py
radix_core/scheduler/: __init__.py  integration.py  job_graph.py  placement.py  planner.py  policies.py  policy.py
radix_core/utils/: __init__.py  randfail.py  timers.py
scripts/: train_info_model.py  train_predictive.py
scripts/ci/: gpu_benchmark_evidence_pack.sh
services/cluster_agent/: Dockerfile  README.md  main.py  requirements.txt
services/gpu_policy/: cluster_metrics.py  cluster_policy.py
tests/: conftest.py  test_cli.py  test_executors.py  test_integration.py
tests/unit/: test_batching.py  test_compute_gating.py  test_config.py  test_errors.py  test_experiment_jobs.py  test_mode.py  test_safety.py  test_scheduler.py  test_types.py  test_utils.py
tools/predictor/: __init__.py  load_rim1_data.py  shadow_predict.py  train_baseline.py
tools/radix-agent/: pyproject.toml
tools/radix-agent/radix_agent/: __init__.py  cli.py  config.py  models.py  state.py
tools/radix-agent/radix_agent/dashboard/: gap_analyzer.py
tools/radix-agent/radix_agent/discover/: __init__.py  acm.py  apigateway.py  base.py  cloudfront.py  cloudwatch.py  cognito.py  ec2.py  ecr.py  eks.py  elb.py  iam.py  kms.py  route53.py  s3.py  ssm.py  vpc.py
tools/radix-agent/radix_agent/terraform/: __init__.py  generator.py  importer.py  reconciler.py
tools/radix-agent/tests/: conftest.py  test_discover.py  test_generator.py  test_reconciler.py
tools/sentinel/: aws_gpu_matrix_runner.py
workloads/peft_lora/: __init__.py  dataset_prep.py  trainer.py
(+1 files in other folders)
