[tool.poetry]
name = "radix-core"
version = "0.1.0"
description = "GPU Orchestration Platform — scheduling, placement, execution, and governance for GPU workloads"
authors = ["VaultScaler Research <research@vaultscaler.com>"]
license = "MIT"
readme = "README.md"
keywords = ["gpu", "orchestration", "parallel", "scheduling", "kubernetes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
packages = [{include = "radix_core"}]

[tool.poetry.dependencies]
python = "^3.9"
# Core dependencies
pydantic = "^2.5.0"
pydantic-settings = "^2.0.0"
typer = ">=0.9.0,<0.14.0"
click = ">=8.0.0,<8.2.0"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
# Orchestration
ray = {extras = ["default"], version = "^2.8.0"}
networkx = "^3.2.0"
# ML stack (optional — install with pip install -e ".[ml]")
torch = {version = "^2.1.0", optional = true}
transformers = {version = "^4.35.0", optional = true}
accelerate = {version = "^0.24.0", optional = true}
peft = {version = "^0.6.0", optional = true}
safetensors = {version = "^0.4.0", optional = true}
datasets = {version = "^2.14.0", optional = true}
# Core utilities
structlog = "^23.1.0"
psutil = "^5.9.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-xdist = "^3.3.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
pytest-asyncio = "^0.21.0"
hypothesis = "^6.88.0"
ruff = "^0.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
bandit = "^1.7.5"

[tool.poetry.extras]
ml = ["torch", "transformers", "accelerate", "peft", "safetensors", "datasets"]
gpu = ["torch", "transformers", "accelerate", "peft", "safetensors"]
all = ["torch", "transformers", "accelerate", "peft", "safetensors", "datasets"]

[tool.poetry.scripts]
radix-core = "radix_core.cli.radix:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["radix_core"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "ray.*",
    "torch.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests as requiring GPU",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["radix_core"]
omit = [
    "*/tests/*",
    "*/test_*",
    "radix_core/cli/*",
    "radix_core/algorithm_comparison.py",
    "radix_core/config_v2.py",
    "radix_core/experiment_manager.py",
    "radix_core/information_theory.py",
    "radix_core/metrics.py",
    "radix_core/metrics_enhanced.py",
    "radix_core/quantum_orchestration.py",
    "radix_core/scheduler/integration.py",
    "radix_core/scheduler/policy.py",
    "radix_core/executors/hf_runner.py",
    "radix_core/executors/vllm_local.py",
    "radix_core/executors/ray_local.py",
    "radix_core/executors/threadpool.py",
]
